Populate application.properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+## DB Connection
+spring.sql.init.continue-on-error=false
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=student
+spring.datasource.username=SA
+spring.datasource.password=P@ssw0rd
 
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.h2.console.enabled=false
+
+## Server Port
+server.port=8081
