- Enable HTTP/2 - Enable HTTP Compression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.h2.console.enabled=false
 
 ## Server Port
 server.port=8081
+
+## Enable HTTP/2 Support
+server.http2.enabled=true
+
+## Enable Compression
+server.compression.enabled=true
