--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Student Management System</name>
 	<description>Project written in Spring Boot implementing an API for student management.</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>17</java.version>
 		<lombok.version>1.18.22</lombok.version>
 		<lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>
 		<lombok-maven.version>1.18.20.0</lombok-maven.version>
@@ -185,8 +185,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>16</source> <!-- depending on your project -->
-					<target>16</target> <!-- depending on your project -->
+					<source>${java.version}</source> <!-- depending on your project -->
+					<target>${java.version}</target> <!-- depending on your project -->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
