Add Thymeleaf location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ server.http2.enabled=true
 
 ## Enable Compression
 server.compression.enabled=true
+
+# Thymeleaf directory
+spring.thymeleaf.prefix=classpath:/public/
